.gitignore fix? To make temp nvalt files not conflict

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 orgmap/
 nvalt/
 
-nvalt-proto/Interim Note-Changes
+nvalt-proto/Interim\ Note-Changes
 
-nvalt-proto/Interim Note-Changes
-
-nvalt-proto/Notes & Settings
+nvalt-proto/Notes\ &\ Settings
